--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -4,10 +4,10 @@ nav.navbar.navbar-fixed-top.navbar-dark.bg-inverse
     .container
       a.navbar-brand(href='/')
         i.icn-logo.material-icons bookmark_border
-        | Bookworm
+        | COURSE-API
       .nav-items.clearfix
         if !currentUser
-          a.nav-item.nav-link(href='register') Sign Up
+          a.nav-item.nav-link(href='signup') Sign Up
         a.nav-item.nav-link(href='about') About
         a.nav-item.nav-link(href='contact') Contact
         a.nav-item.nav-link(href='profile') My Profile
